fixing alignment issue in code block rendering in some pages

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -84,6 +84,10 @@
     --ifm-table-border-color: #e8e8e8;
 }
 
+.theme-code-block{
+    display: grid;
+}
+
 .container {
     margin: 0;
     max-width: 100% !important;
